--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-Django>=5.2.10
-djangorestframework>=3.16.1
-pandas>=2.3.3
-openpyxl>=3.1.5
-requests>=2.32.5
+asgiref==3.11.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+Django==5.2.10
+djangorestframework==3.16.1
+et_xmlfile==2.0.0
+idna==3.11
+numpy==2.4.1
+openpyxl==3.1.5
+pandas==2.3.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+requests==2.32.5
+six==1.17.0
+sqlparse==0.5.5
+tzdata==2025.3
+urllib3==2.6.3
